# TasksManagerApp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: app.py  db.py  mail.py  main.py
src/blueprints/: reminders.py  subscribers.py  tasks.py
src/sql/: schema.sql
src/templates/: base.html
src/templates/errors/: db_down.html
src/templates/reminders/: list.html
src/templates/subscribers/: form.html  list.html
src/templates/tasks/: archived.html  detail.html  form.html  list.html
